to to should be to
git-svn-id: file:///srv/svn/publican/trunk@1460 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/README
+++ b/publican/README
@@ -28,6 +28,14 @@ Q: Where are the common files located?
 
 A: By default they are in /usr/share/publican
 
+Q: How do I profile publican?
+
+A: Devel::NYTProf is a good option.
+
+$ perl -d:NYTProf /usr/bin/publican build --langs en-US --formats html
+$ nytprofhtml
+$ firefox nytprof/index.html 
+
 Q: How do I build publican from source?
 
 A: It depends on your platform.
