--- a/publican/datadir/Common_Content/common/ca-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/ca-ES/Conventions.po
@@ -104,7 +104,7 @@ msgstr "Això fa referència a paraules o frases trobades al sistema, incloent e
 #. Tag: para
 #, no-c-format
 msgid "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu bar to launch <application>Mouse Preferences</application>. In the <guilabel>Buttons</guilabel> tab, click the <guilabel>Left-handed mouse</guilabel> check box and click <guibutton>Close</guibutton> to switch the primary mouse button from the left to the right (making the mouse suitable for use in the left hand)."
-msgstr "Seleccioneu <menuchoice><guimenu>Sistema</guimenu><guisubmenu>Preferències</guisubmenu><guimenuitem>Ratolí<guimenuitem></menuchoice> des de la barra del menú principal par a llançar les <application>Preferències del ratolí</application>. A la pestanya <guilabel>Botons</guilabel>, cliqueu a la casella <guilabel>Ratolí per a esquerrans</guilabel>, i cliqueu a <guibutton>Tancar</guibutton> per a canviar el botó principal del ratolí del cantó esquerra al cantó dret (adaptant el ratolí per a esquerrans)."
+msgstr "Seleccioneu <menuchoice><guimenu>Sistema</guimenu><guisubmenu>Preferències</guisubmenu><guimenuitem>Ratolí</guimenuitem></menuchoice> des de la barra del menú principal par a llançar les <application>Preferències del ratolí</application>. A la pestanya <guilabel>Botons</guilabel>, cliqueu a la casella <guilabel>Ratolí per a esquerrans</guilabel>, i cliqueu a <guibutton>Tancar</guibutton> per a canviar el botó principal del ratolí del cantó esquerra al cantó dret (adaptant el ratolí per a esquerrans)."
 
 #. Tag: para
 #, no-c-format
